# TOI-project1

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  ip.sh  platformio.ini  presetup.sh  pyproject.toml  requirements.txt
app/: app.py  big_mat.py
junk/: firmware.h  main  wifi
rpiscripts/: rpisetup.sh  usb.sh
src/: configuration.h  devices.c  devices.h  espnow_example_main  firmware.h  main.c  mqtt.c  mqtt.h  peer_net  peer_net.c  peer_net.h  sensors.c  sensors.h  wifi.c
